# prog1nhf

./: CMakeLists.txt  Mezok_kezelese.c  README.md  SDL_letrehozas.c  SDL_letrehozas.h  animacio.c  felszabadito.c  felszabadito.h  main.c  rajzok.h  utkereses.h  vezerles.c
headers/: Mezok_kezelese.h  Minden_inicializalasi_elem.h  animacio.h  structurak.h  vezerles.h
src/: Minden_inicializalasi_elem.c  rajzok.c  utkereses.c
